Fixed options height overflow issue

--- a/css/options.css
+++ b/css/options.css
@@ -1,5 +1,5 @@
 body {
-  overflow: hidden;
+  overflow-x: hidden;
   min-width: 450px;
   font-size: .85rem;
 }
